nova_tests/negative_capability/folder_cycle_setup/modA/one.nv
// Plan 162 Ф.2: folder-module cycle test — modA peer 1.
// Peer of folder-module modA. Imports modB (which imports modA → cycle).
// a_val is independent of modB's values — no runtime dependency.

module negative_capability.folder_cycle_setup.modA

import nova_tests.negative_capability.folder_cycle_setup.modB as modB

export const A_VAL int = 10
